W-12942378: Decouple scheduler service from mule-core