@@ -206,10 +206,10 @@
         <gpg.plugin.version>1.6</gpg.plugin.version>
         <gmavenPluginVersion>1.5</gmavenPluginVersion>
         <javadocPluginVersion>3.2.0</javadocPluginVersion>
-        <mavenCompilerVersion>3.8.1</mavenCompilerVersion>
+        <mavenCompilerVersion>3.11.0</mavenCompilerVersion>
         <eclipsePluginVersion>2.10</eclipsePluginVersion>
         <maven.buildnumber.plugin.version>1.4</maven.buildnumber.plugin.version>
-        <maven.surefire.plugin.version>2.22.2</maven.surefire.plugin.version>
+        <maven.surefire.plugin.version>3.0.0</maven.surefire.plugin.version>
         <maven.enforcer.plugin.version>1.4.1</maven.enforcer.plugin.version>
 
         <mule.module.maven.plugin.version>1.5.0-SNAPSHOT</mule.module.maven.plugin.version>
@@ -1164,60 +1164,6 @@
                         </executions>
                     </plugin>
                 </plugins>
-            </build>
-        </profile>
-        <profile>
-            <id>jdk-11</id>
-            <activation>
-                <jdk>11</jdk>
-            </activation>
-            <build>
-                <pluginManagement>
-                    <plugins>
-                        <plugin>
-                            <groupId>org.apache.maven.plugins</groupId>
-                            <artifactId>maven-surefire-plugin</artifactId>
-                            <configuration>
-                                <argLine>${surefire.args} --add-exports=java.xml/jdk.xml.internal=ALL-UNNAMED --add-opens java.base/jdk.internal.loader=ALL-UNNAMED --add-opens java.base/jdk.internal.misc=ALL-UNNAMED</argLine>
-                            </configuration>
-                        </plugin>
-                    </plugins>
-                </pluginManagement>
-            </build>
-        </profile>
-        <profile>
-            <id>jdk-17</id>
-            <activation>
-                <jdk>17</jdk>
-            </activation>
-            <build>
-                <pluginManagement>
-                    <plugins>
-                        <plugin>
-                            <groupId>org.apache.maven.plugins</groupId>
-                            <artifactId>maven-surefire-plugin</artifactId>
-                            <configuration>
-                                <!--TODO W-12526424: Remove add opens for java 17 tests -->
-                                <argLine>${surefire.args}
-                                    --add-exports java.xml/com.sun.org.apache.xerces.internal.jaxp=ALL-UNNAMED
-                                    --add-exports java.xml/jdk.xml.internal=ALL-UNNAMED
-                                    --add-opens java.base/java.io=ALL-UNNAMED
-                                    --add-opens java.base/java.lang=ALL-UNNAMED
-                                    --add-opens java.base/java.lang.reflect=ALL-UNNAMED
-                                    --add-opens java.base/java.net=ALL-UNNAMED
-                                    --add-opens java.base/java.util=ALL-UNNAMED
-                                    --add-opens java.base/java.util.concurrent=ALL-UNNAMED
-                                    --add-opens java.base/java.util.regex=ALL-UNNAMED
-                                    --add-opens java.base/jdk.internal.loader=ALL-UNNAMED
-                                    --add-opens java.base/jdk.internal.misc=ALL-UNNAMED
-                                    --add-opens java.base/sun.net.www.protocol.file=ALL-UNNAMED
-                                    --add-opens java.base/sun.net.www.protocol.jar=ALL-UNNAMED
-                                    --add-opens java.desktop/java.beans=ALL-UNNAMED
-                                    --add-opens java.xml/javax.xml.namespace=ALL-UNNAMED</argLine>
-                            </configuration>
-                        </plugin>
-                    </plugins>
-                </pluginManagement>
             </build>
         </profile>
     </profiles>
